--- a/style/index.css
+++ b/style/index.css
@@ -167,8 +167,17 @@ p {
   justify-content: space-evenly;
 }
 .navigation img {
-  align-self: baseline;
+  align-self: flex-start;
   margin-top: 1%;
+}
+.navigation nav a {
+  text-decoration: none;
+  color: black;
+  font-weight: bold;
+}
+h2,
+p {
+  font-weight: bold;
 }
 
 .top-content {
@@ -181,7 +190,7 @@ p {
 
 .top-content .text-container {
   width: 48%;
-  padding: 0 1%;
+  padding: 2% 1% 2% 1%;
   padding-bottom: 20px;
 }
 
@@ -204,14 +213,42 @@ p {
 .middle-content .boxes .box {
   width: 12.5%;
   height: 100px;
-  background: black;
   margin: 20px 2.5%;
   color: white;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-
+.box1 {
+  background: teal;
+}
+.box2 {
+  background: gold;
+}
+.box3 {
+  background: cadetblue;
+}
+.box4 {
+  background: coral;
+}
+.box5 {
+  background: crimson;
+}
+.box6 {
+  background: forestgreen;
+}
+.box7 {
+  background: darkorchid;
+}
+.box8 {
+  background: hotpink;
+}
+.box9 {
+  background: indigo;
+}
+.box10 {
+  background: dodgerblue;
+}
 .bottom-content {
   display: flex;
   margin: 0 2% 20px;
